- added new SQL patch to set up config groups for general and plugin settings
- make storefront use db persisted plugin status rather than loading all
  plugins every time
- cache plugin instances per request
- clean up ZMPlugin to make config and status handling simpler
- make ZMPlugin extend ZMObject rather than ZMService
- allow plugins to execute SQL patches
- added CAPTCHA TTF plugin

Release 0.8.1
- added replacement method for ZMRequest::getParameter() called
  ZMRequest::getParameter(...)
- added ZMConfigGroup and a few more methods to ZMConfig
- added ZMRequest::isAdmin() to check for admin context
- allow the page value of a view to be a function rather than a view filename;
  requires change to layout files
- allow themes to override plugin view files
- added ZMCrumbtrail::clear() method
- renamed ZMPluginFilter ZMPluginHandler, renamed
  ZMPluginHandler::applyFilter(..) to ZMPluginHandler::filterResponse(..)
- fixed build process for update packages
- fixed loader isse that stopped theme classes being found; for example,
  custom MetaTags class, etc.
- fix online demo store meta tags
- added ZenMagick event 'init_done'; ZenMagick events all use 'onZM' as
  prefix, so the event resolves to a callback metod name of onZMInitDone(..)
- added if-modified-since and etag header for cache hits
- added support for plugin admin pages added dynamically to the menu system;
  see ZMPlugin::addMenuItem(...) for details
- added admin support for faster header (less code but also less
  functionallity)
- added code to allow plugins add links to the admin menu dynamically; this
  will allow plugins to have custom admin pages
- fixed a few typos in RSS classes
- added support to include plugins into core.php; plugins control this via
  ZMPlugin::getLoaderSupport()
- changed handler generation so plugins implement
  ZMPlugin::createPluginHandler() if they require a handler; this allows the
	handler to be reused by internally caching it