@@ -23,6 +23,10 @@ Release 0.8.2
 - make ZMPlugin extend ZMObject rather than ZMService
 - allow plugins to execute SQL patches
 - added CAPTCHA TTF plugin
+- make email validation case insensitive (#1756658)
+- make zm_ajax_href use whatever protocol is used for the current request
+  (effectively, this will make it switch to SSL for HTTPS requests and vice
+  versa) (#1756689)
 
 Release 0.8.1
 - added replacement method for ZMRequest::getParameter() called
